Fix accessibility issues with webmanifest, text contrast; Update parcel with copying static files like robots.txt; Add google fonts with preconnect and dns-prefetch

--- a/src/sass/_feature-card.scss
+++ b/src/sass/_feature-card.scss
@@ -28,7 +28,7 @@
     margin-block-end: 0;
   }
   .c-feature-card__desc {
-    color: var(--grayish-blue);
+    color: var(--light-text);
     margin-block-start: 0.8em;
     margin-block-end: 2.2em;
   }
