--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -12,6 +12,7 @@
 
   --dark-text: #444;
   --lighter-dark-text: #555;
+  --light-text: #6d6d6d;
 
   /* Fonts */
   --body-copy-font-size: 15px;
