--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -15,7 +15,7 @@
     color: var(--lighter-dark-text);
   }
   .c-header__desc {
-    color: var(--grayish-blue);
+    color: var(--light-text);
     font-size: 13px;
     padding: 0 26px;
   }
