--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,5 +7,5 @@
 body {
   font-family: var(--primary-font-family);
   font-size: var(--body-copy-font-size);
-  background-color: var(--very-light-gray);
+  background-color: white;
 }
